--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap"
     rel="stylesheet">
-  <title>School Management System</title>
+  <title>Smart School System</title>
 </head>
 
 <body>
